--- a/templates/default/ifcfg-br0.erb
+++ b/templates/default/ifcfg-br0.erb
@@ -3,8 +3,6 @@ TYPE="Bridge"
 BOOTPROTO="static"
 ONBOOT="yes"
 NM_CONTROLLED="no"
-IPADDR="192.168.3.100"
-NETMASK="255.255.255.0"
-GATEWAY="192.168.3.1"
-DNS1="8.8.8.8"
+IPADDR="<%= @ipaddr %>"
+DNS1="<%= @dns %>"
 DELAY="0"
