--- a/templates/default/ifcfg-br0.erb
+++ b/templates/default/ifcfg-br0.erb
@@ -4,5 +4,6 @@ BOOTPROTO="static"
 ONBOOT="yes"
 NM_CONTROLLED="no"
 IPADDR="<%= @ipaddr %>"
+NETMASK="<%= @netmask %>"
 DNS1="<%= @dns %>"
 DELAY="0"
