--- a/templates/default/hva.conf.erb
+++ b/templates/default/hva.conf.erb
@@ -86,7 +86,7 @@ dc_network('null2') {
 
 dc_network('management') {
   bridge_type 'linux'
-  interface 'eth1'
+  interface 'br1'
   bridge 'br1'
 }
 
